# flowkit

./: .gitignore  AGENTS.md  BACKLOG.md  DECISIONS.md  README.md  alembic.ini  demo_workflows.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
diagrams/: flow1_linear_pipeline.mmd  flow2_branching.mmd  flow3_human_in_loop.mmd
plans/: 2026-03-11-mvp-implementation.md
specs/: architecture.md  dsl-v1.md  persistence.md
src/flowkit/: __init__.py  config.py  errors.py
src/flowkit/api/: app.py  deps.py  middleware.py
src/flowkit/definition/: loader.py  schema.py  validator.py
src/flowkit/engine/: __init__.py  commands.py  dispatcher.py  executor.py  graph.py
src/flowkit/nodes/: base.py  code.py  end.py  http.py  human_input.py  if_else.py  loop.py  parallel.py  registry.py  start.py  sub_workflow.py
src/flowkit/persistence/: database.py  models.py  repos.py
src/flowkit/plugins/: adapter.py  base.py  loader.py
src/flowkit/runtime/: state.py  variable_pool.py
src/flowkit/scheduler/: poller.py
src/flowkit/streaming/: emitter.py  sse.py  ws.py
src/flowkit/triggers/: webhook.py
src/flowkit/worker/: settings.py  tasks.py
tests/: conftest.py
tests/integration/: conftest.py  test_branching_workflow.py  test_linear_workflow.py  test_pause_resume.py  test_webhook_trigger.py
tests/unit/: test_config.py  test_errors.py
tests/unit/api/: conftest.py  test_middleware.py  test_routes.py
tests/unit/definition/: test_loader.py  test_schema.py  test_validator.py
tests/unit/engine/: test_commands.py  test_dispatcher.py  (+2 more)
(+34 files in other folders)
